# appointment-manager

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/backend/: main.py
src/backend/alembic/: env.py
src/backend/alembic/data/: users.json
src/backend/alembic/versions/: 63b8f86ea4aa_remove_role.py  d3fa7c5d8af2_initial.py
src/backend/app/api/: dependencies.py
src/backend/app/api/api_v1/: api.py
src/backend/app/api/api_v1/routers/: users.py
src/backend/app/core/: config.py
src/backend/app/crud/: base.py  users.py
src/backend/app/db/: __init__.py  base_class.py  sessions.py
src/backend/app/models/: __init__.py  base.py  users.py
src/backend/app/schemas/: users.py
