[tool.poetry]
name = "appointment-manager"
version = "0.1.0"
description = ""
authors = ["Lucas Lucyk <lucaslucyk@gmail.com>"]
readme = "README.md"
packages = [{include = "appointment_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
pydantic = "^1.10.1"
email-validator = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
