[tool.poetry]
name = "appointment-manager"
version = "0.1.0"
description = ""
authors = ["Lucas Lucyk <lucaslucyk@gmail.com>"]
readme = "README.md"
packages = [{include = "appointment_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"
pydantic = "^1.10.1"
email-validator = "^1.2.1"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
SQLAlchemy-Utils = "^0.38.3"
asyncpg = "^0.26.0"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
